# pacgui

./: .gitignore  README.md
.kdev4/: pacgui-git.kdev4
src/: CMakeLists.txt  alpm_backend.cpp  alpm_backend.h  application.cpp  application.h  bundle.sh  main.cpp  mainwindow.cpp  mainwindow.ui  mainwindow_ui.h  test.cpp
src/.kdev4/: src.kdev4
